--- a/HTML-CSS/Landing-Page/index.html
+++ b/HTML-CSS/Landing-Page/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OBA 2024 - 27ª edição </title>
-    <link rel="stylesheet" href="Prova1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -47,9 +47,9 @@
             </div>
             
             <div class="datas__container">
-                <h3 class="datas__container__titulo"> Gabarito </h3>
+                <h3 class="datas__container__titulo"> Divulgação dos Premiados </h3>
 
-                <p class="datas__container__texto"> Divulgação do Gabarito Oficial no Site da OBA na Seção de Provas e Gabaritos </p>
+                <p class="datas__container__texto"> Divulgação da Lista dos Medalhistas Nacionais </p>
                 <p class="datas__container__texto2 datas__container__texto2--2"> 30/06 </p>
 
             </div>
