--- a/HTML-CSS/Landing-Page/index.html
+++ b/HTML-CSS/Landing-Page/index.html
@@ -18,7 +18,7 @@
 
     <main>
         <h1 class="main__titulo"> Olimpíada Dedicada aos Estudos do <strong class="forte">UNIVERSO</strong> </h1>
-        <h2 class="main__titulo main__titulo--subtitulo"> <u class="main__titulo main__titulo--subtitulo">Unica</u> Olimpíada Brasileira Sobre Astronomia!</h2>
+        <h2 class="main__titulo main__titulo--subtitulo"> <u class="main__titulo main__titulo--subtitulo">Única</u> Olimpíada Brasileira Sobre Astronomia!</h2>
 
         <img class="main__ceu" loading="lazy" src="Prova1-Imagens/ceu-estrelado.jpg" alt="imagem de um ceu cheio de estrelas">
 
